<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/redgreen_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="@color/black"
        android:text="@string/red_light_green_light"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameover_tv"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="@color/gray"
        android:text="@string/gOver"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/go_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redgreen_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stop_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="@color/green"
        android:text="@string/stop"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameover_tv"
        app:layout_constraintTop_toBottomOf="@+id/redgreen_tv"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ready_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="@color/green"
        android:text="@string/ready"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gameover_tv"
        app:layout_constraintTop_toBottomOf="@+id/stop_tv"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/go_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="@color/green"
        android:text="@string/go"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gameover_tv"
        app:layout_constraintTop_toBottomOf="@+id/ready_tv"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/red_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/red"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yellow_btn2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/yellow_btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/yellow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Green_btn3"
        app:layout_constraintStart_toEndOf="@+id/red_btn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Green_btn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/yellow_btn2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>